src/objects/BatchExecute__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting for store additional configuration for batchs</description>
    <fields>
        <fullName>BatchSize__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Size Of Batch</description>
        <label>Batch Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of batch</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeFrame__c</fullName>
        <description>Time Frame from starting batch</description>
        <label>Time Frame</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Batch Execute</label>
</CustomObject>